Add "fix" target for consistent formatting

--- a/src/Makefile
+++ b/src/Makefile
@@ -11,6 +11,10 @@ MilleBornes.dsk: ORIG.dsk HELLO Makefile
 HELLO: mb.bas
 	tokenize_asoft < $< > $@ || { rm $@; exit 1; }
 
+.PHONY: fix
+fix: HELLO
+	asoft_detoken < HELLO >| mb.bas
+
 .PHONY: clean
 clean:
 	rm -f MilleBornes.dsk HELLO
